2005-11-29  Michael Kifer  <kifer@cs.stonybrook.edu>
	
	* ediff-wind (ediff-setup-control-frame, ediff-make-wide-display):
	preserve user position.
	
2005-11-28  Luc Teirlinck  <teirllm@auburn.edu>

	* font-lock.el: Throw error if facemenu is not loaded to prevent
	accidental change of loading order in loadup.el.  (Suggested by RMS.)

	* loadup.el: Add comment explaining why facemenu must be loaded
	before font-lock.

2005-11-28  Jay Belanger  <belanger@truman.edu>

	* calc/calc.el: Change global keybinding for calc-dispatch to "\C-x*".
	(calc-dispatch-map): Add more keys for `calc-same-interface'.

	* calc/calc-misc.el (calc-dispatch-help): Update docstring.

	* calc/calc-embed.el (calc-do-embedded): Update help message.

	* calc/calc-prog.el (calc-user-define-invokation): Update help message.

2005-11-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* log-edit.el (log-edit-insert-cvs-rcstemplate): Ignore stderr.

	* emacs-lisp/elp.el (elp-not-profilable): Replace interactive-p with
	called-interactively-p.
	(elp-profilable-p): Rename from elp-not-profilable-p.
	Invert result and take into account macros and autoloaded functions.
	(elp-instrument-function): Update call.
	(elp-instrument-package): Update call.  Add completion.
	(elp-pack-number): Use match-string.
	(elp-results-jump-to-definition-by-mouse): Merge into
	elp-results-jump-to-definition and then remove.
	(elp-output-insert-symname): Make help echo text single-line.

	* replace.el (query-replace-map): Move initialization into declaration.
	(occur-engine): Use with-current-buffer.
	(occur-mode-goto-occurrence): Make it work for mouse-clicks as well.
	(occur-mode-mouse-goto): Replace with an alias.

2005-11-28  Juri Linkov  <juri@jurta.org>

	* simple.el (quoted-insert): Let-bind input-method-function to nil.

	* term/w32-win.el: Bind [S-tab] to [backtab].

	* info.el (Info-fontify-node): Set 2nd arg `noerror' of
	`Info-find-file' to t.

	* replace.el (occur-mode-mouse-goto): Pop, don't switch.